Code Cleanup, Optimization, and Updated Documentation